maestro/deploy/istio.yml
---
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: allow-nothing
  namespace: maestro
spec: {}
---
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: allow-cluster-service
  namespace: maestro
spec:
  action: "ALLOW"
  rules:
    - from:
      - source:
          principals: ["cluster.local/ns/cluster-service/sa/clusters-service"]
      to:
      - operation:
          ports:
            - "8000"
            - "8090"
  selector:
    matchLabels:
      app: "maestro"
---
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: allow-maestro-to-db
  namespace: maestro
spec:
  action: "ALLOW"
  rules:
    - from:
      - source:
          principals: ["cluster.local/ns/maestro/sa/maestro"]
      to:
      - operation:
          ports:
            - "5432"
  selector:
    matchLabels:
      name: "maestro-db"
